# ez_gpg

./: .gitignore  .gitleaks.toml  .ruby-gemset  README.md  ezgpg  package.sh  publish.sh  pyproject.toml  requirements.txt  setup.py
data/: encrypt_window.ui  main_window.ui  sign_window.ui
ez_gpg/: __init__.py  config.py  gpg_utils.py  ui.py  ui_utils.py  utils.py
ez_gpg/data/: application.css  create_key_window.ui  decrypt_window.ui  encrypt_window.ui  key_management.ui  main_window.ui  sign_window.ui  verify_window.ui
tests/: conftest.py  test_config.py  test_gpg_utils.py
ui/: .main_window.py.swp  main_window.py
